<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.rstit.base.ui.main.MainViewModel"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            app:visibleIf="@{!model.mIsFormVisible}">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_large"
                android:onClick="@{() -> model.openLogin()}"
                android:text="@string/main_login"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_large"
                android:onClick="@{() -> model.openRegister()}"
                android:text="@string/main_register"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_large"
                android:onClick="@{() -> model.openForgot()}"
                android:text="@string/main_forgot_password"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/flContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:visibleIf="@{model.mIsFormVisible}"/>
    </FrameLayout>
</layout>
